--- a/learnpython/Envs/projects/freshDay/templates/fd_cart/cart.html
+++ b/learnpython/Envs/projects/freshDay/templates/fd_cart/cart.html
@@ -1,16 +1,99 @@
 {% extends 'base.html' %}
 
-{% block content %}
-	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="images/logo.png"></a>
-		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;购物车</div>
-		<div class="search_con fr">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>		
-	</div>
+{% block head %}
+<script>
+	function add(id) {
+	    num = parseFloat($('.num_show_'+id).val());
+        $('.num_show_' + id).val(num + 1);
+        $('.num_show_' + id).blur();
+        total();
+        }
+    function minus(id) {
+	    num = parseFloat($('.num_show_'+id).val());
+	    if(num > 0) {
+            $('.num_show_' + id).val(num - 1);
+            $('.num_show_' + id).blur();
+        }
+        total();
+    }
 
-	<div class="total_count">全部商品<em>2</em>件</div>	
+
+    function del() {
+        
+    }
+    $(function () {
+        total();
+
+        //全选全消
+        $('#check_all').click(function () {
+            state = $(this).prop('checked');
+            $(':checkbox:not(#check_all)').prop('checked',state);
+        });
+
+        //选择
+        $(':checkbox:not(#check_all)').click(function () {
+            if($(this).prop('checked')) {
+                if ($(':checked').length+1 == $(':checkbox').length) {
+                    $('#check_all').prop('checked', true);
+                }
+            }else{
+                $('#check_all').prop('checked',false);
+            }
+        });
+
+        $('.num_show').blur(function () {
+            count = $(this).val();
+            if(count<0){
+                alert('请输入正确的数量');
+                $(this).val(1);
+                $(this).focus();
+                return;
+            }
+            cart_id = $(this).parents('.cart_list_td').attr('id');
+            $.get('/cart/edit'+cart_id+'_'+count+'/',function (data) {
+                if(data.ok==0){
+                    total();
+                }else {
+                    $(this).val(data.ok);
+                }
+            })
+        });
+    });
+
+    function total() {
+        total1 = 0;
+        total_count = 0;
+        $('.col07').each(function () {
+            count = $(this).prev().find('input').val();
+            price = $(this).prev().prev().text();
+            total0 = parseFloat(count)*parseFloat(price);
+            $(this).text(total0.toFixed(2)+'元');
+            total1 += total0;
+            total_count ++;
+        });
+        $('#total').text(total1.toFixed(2));
+        $('.total_count').text(total_count);
+    }
+
+    function cart_del(cart_id) {
+        del = confirm('确定要删除吗？');
+        if(del){
+            $.get('/cart/delete'+cart_id+'/',function (data) {
+                if(data.ok == 1){
+                    $('ul').remove('#'+cart_id);
+                    total();
+                }
+            });
+        }
+    }
+
+</script>
+{% endblock head %}
+
+
+{% block content %}
+
+
 	<ul class="cart_list_th clearfix">
 		<li class="col01">商品名称</li>
 		<li class="col02">商品单位</li>
@@ -19,45 +102,31 @@
 		<li class="col05">小计</li>
 		<li class="col06">操作</li>
 	</ul>
-	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="images/goods/goods012.jpg"></li>
-		<li class="col03">奇异果<br><em>25.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">25.80元</li>
-		<li class="col06">
-			<div class="num_add">
-				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">	
-				<a href="javascript:;" class="minus fl">-</a>	
-			</div>
-		</li>
-		<li class="col07">25.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
-	</ul>
 
-	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="images/goods/goods003.jpg"></li>
-		<li class="col03">大兴大棚草莓<br><em>16.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">16.80元</li>
+{% for cart in carts %}
+    <ul class="cart_list_td clearfix" id="{{ cart.id }}">
+		<li class="col01"><input type="checkbox" name="cart_id" id="cart_id" value="{{ cart.id }}" checked></li>
+		<li class="col02"><img src="/static/{{ cart.goods.gpic }}"></li>
+		<li class="col03">{{ cart.goods.gtitle }}<br><em>{{ cart.goods.gprice }}元/{{ cart.goods.gunit }}</em></li>
+		<li class="col04">{{ cart.goods.gunit }}</li>
+		<li class="col05 gprice">{{ cart.goods.gprice }}</li>
 		<li class="col06">
 			<div class="num_add">
-				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">	
-				<a href="javascript:;" class="minus fl">-</a>	
+				<a href="javascript:add({{ cart.id }});" class="add fl">+</a>
+				<input type="text" class="num_show_{{ cart.id }} num_show fl" value="{{ cart.count }}">
+				<a href="javascript:minus({{ cart.id }});" class="minus fl">-</a>
 			</div>
 		</li>
-		<li class="col07">16.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
+		<li class="col07">0.00</li>
+		<li class="col08"><a href="javascript:cart_del({{ cart.id }});">删除</a></li>
 	</ul>
-	
+{% endfor %}
+
 
 	<ul class="settlements">
-		<li class="col01"><input type="checkbox" name="" checked=""></li>
+		<li class="col01"><input id="check_all" type="checkbox" name="" checked></li>
 		<li class="col02">全选</li>
-		<li class="col03">合计(不含运费)：<span>¥</span><em>42.60</em><br>共计<b>2</b>件商品</li>
+		<li class="col03">合计(不含运费)：<span>¥</span><em id="total">42.60</em><br>共计<b class="total_count">2</b>件商品</li>
 		<li class="col04"><a href="place_order.html">去结算</a></li>
 	</ul>
 
