--- a/learnpython/Envs/projects/freshDay/templates/fd_user/user_center_info.html
+++ b/learnpython/Envs/projects/freshDay/templates/fd_user/user_center_info.html
@@ -32,14 +32,14 @@
                     {% for g in goods_list %}
                     <li>
                         <a href="/{{ g.id }}/"><img src="/static/{{ g.gpic }}"></a>
-                        <h4><a href="/{{ g.id }}/">大兴大棚草莓</a></h4>
+                        <h4><a href="/{{ g.id }}/">{{ g.gtitle|slice:'10' }}...</a></h4>
                         <div class="operate">
                             <span class="prize">￥{{ g.gprice }}</span>
                             <span class="unit">{{ g.gunit }}</span>
                             <a href="#" class="add_goods" title="加入购物车"></a>
                         </div>
                     </li>
-                    {{ endfor }}
+                    {% endfor %}
 			    </ul>
 		</div>
 		</div>
