--- a/learnpython/Envs/projects/freshDay/templates/fd_cart/cart.html
+++ b/learnpython/Envs/projects/freshDay/templates/fd_cart/cart.html
@@ -74,7 +74,7 @@
                 total_count ++;
             }
         });
-        $('#total').text(total1.toFixed(2));
+        $('#total').text(total1.toFixed(2)+'元');
         $('.total_count').text(total_count);
     }
 
@@ -130,7 +130,7 @@
 		<li class="col01"><input id="check_all" type="checkbox" name="" checked></li>
 		<li class="col02">全选</li>
 		<li class="col03">合计(不含运费)：<span>¥</span><em id="total">42.60</em><br>共计<b class="total_count">2</b>件商品</li>
-		<li class="col04"><a href="place_order.html">去结算</a></li>
+		<li class="col04"><a href="/orders/order/">去结算</a></li>
 	</ul>
 
 	{% endblock %}
